tests/paczka1/fuzzy1/41895275.err
Error in line 1: 4Gzkq S693 11,9
Error in line 5: 4Gzkq S222 27,8
Error in line 12: FoC6dXr S693 80,7
Error in line 16: FoC6dXr S169 68,4
Error in line 24: okNRFa4 S693 91,34
Error in line 26: okNRFa4 S222 42,0
Error in line 38: okNRFa4 A904 -1,1
Error in line 35: okNRFa4 A904 14,7
